syntax = "proto3";

package api.reference.v1;

import "google/api/annotations.proto";

option go_package = "credit-analytics-backend/api/reference/v1;v1";
option java_multiple_files = true;
option java_package = "api.reference.v1";

service Reference {
  rpc ListLoanProducts (ListLoanProductsRequest) returns (ListLoanProductsReply) {
    option (google.api.http) = {
      get: "/v1/reference/loan-products"
    };
  }
  rpc GetLoanProduct (GetLoanProductRequest) returns (LoanProduct) {
    option (google.api.http) = {
      get: "/v1/reference/loan-products/{id}"
    };
  }
  rpc ListBranches (ListBranchesRequest) returns (ListBranchesReply) {
    option (google.api.http) = {
      get: "/v1/reference/branches"
    };
  }
  rpc ListLoanOfficers (ListLoanOfficersRequest) returns (ListLoanOfficersReply) {
    option (google.api.http) = {
      get: "/v1/reference/branches/{branch_code}/officers"
    };
  }
  rpc ListApplicationStatuses (ListApplicationStatusesRequest) returns (ListApplicationStatusesReply) {
    option (google.api.http) = {
      get: "/v1/reference/application-statuses"
    };
  }
  rpc ListFinancialGLAccounts (ListFinancialGLAccountsRequest) returns (ListFinancialGLAccountsReply) {
    option (google.api.http) = {
      get: "/v1/reference/gl-accounts"
    };
  }
}

message LoanProduct {
  string id = 1;
  string product_code = 2;
  string product_name = 3;
  string segment = 4;
  bool active = 5;
}

message Branch {
  string branch_code = 1;
  string branch_name = 2;
  string region_code = 3;
}

message LoanOfficer {
  string id = 1;
  string officer_code = 2;
  string branch_code = 3;
}

message ApplicationStatusRef {
  string status_code = 1;
  string status_group = 2;
  bool is_terminal = 3;
  string description = 4;
}

message FinancialGLAccount {
  string gl_code = 1;
  string gl_name = 2;
  string statement_type = 3;
  string category = 4;
  int32 sign = 5;
  bool is_debt_service = 6;
  bool is_operating = 7;
  string description = 8;
}

message ListLoanProductsRequest {}
message ListLoanProductsReply {
  repeated LoanProduct products = 1;
}

message GetLoanProductRequest {
  string id = 1;
}

message ListBranchesRequest {}
message ListBranchesReply {
  repeated Branch branches = 1;
}

message ListLoanOfficersRequest {
  string branch_code = 1;
}
message ListLoanOfficersReply {
  repeated LoanOfficer officers = 1;
}

message ListApplicationStatusesRequest {}
message ListApplicationStatusesReply {
  repeated ApplicationStatusRef statuses = 1;
}

message ListFinancialGLAccountsRequest {}
message ListFinancialGLAccountsReply {
  repeated FinancialGLAccount accounts = 1;
}
